--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "-": "0.0.1",
     "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
