--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.9",
     "@types/dotenv": "^8.2.0",
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
     "fetch-api": "0.0.2",
